--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <tr>
         <td>
           <img
-            src="C:\Users\user\Desktop\web dev\html- personal file\photos\sid_photo.jpeg"
+            src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftwitter.com%2Fnegi_was_here&psig=AOvVaw0DvEK3ZgIl2JD1Q6jxQ-vo&ust=1626427062042000&source=images&cd=vfe&ved=0CAcQjRxqFwoTCLiS1JPf5PECFQAAAAAdAAAAABAD"
             alt="Profile picture"
             height="200"
             width="200"
