--- a/index.html
+++ b/index.html
@@ -11,12 +11,7 @@
     <table cellspacing="20">
       <tr>
         <td>
-          <img
-            src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftwitter.com%2Fnegi_was_here&psig=AOvVaw0DvEK3ZgIl2JD1Q6jxQ-vo&ust=1626427062042000&source=images&cd=vfe&ved=0CAcQjRxqFwoTCLiS1JPf5PECFQAAAAAdAAAAABAD"
-            alt="Profile picture"
-            height="200"
-            width="200"
-          />
+          <img src="https://pbs.twimg.com/profile_images/1393352252849475584/9wslNgXO_400x400.jpg" alt="Profile picture">
         </td>
         <td>
           <h1>Siddhant Negi</h1>
