--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <table cellspacing="20">
       <tr>
         <td>
-          <img src="https://pbs.twimg.com/profile_images/1393352252849475584/9wslNgXO_400x400.jpg" alt="Profile picture">
+          <img src="https://pbs.twimg.com/profile_images/1393352252849475584/9wslNgXO_400x400.jpg" height="200"
+            width="200" alt="Profile picture">
         </td>
         <td>
           <h1>Siddhant Negi</h1>
